--- a/bin/v0.34.x/Dockerfile
+++ b/bin/v0.34.x/Dockerfile
@@ -15,12 +15,13 @@ WORKDIR /code
 COPY . /code/
 
 # See https://github.com/CosmWasm/wasmvm/releases
-ADD https://github.com/CosmWasm/wasmvm/releases/download/v0.16.3/libwasmvm_muslc.a /lib/libwasmvm_muslc.a
+ADD https://github.com/terra-money/wasmvm/releases/download/v0.16.4-drop-order-fix/libwasmvm_muslc.a /lib/libwasmvm_muslc.a
 
 # use mimalloc for musl
 RUN git clone --depth 1 https://github.com/microsoft/mimalloc; cd mimalloc; mkdir build; cd build; cmake ..; make -j$(nproc); make install
 
-ENV MIMALLOC_LARGE_OS_PAGES=1
+ENV MIMALLOC_VERBOSE=1
+ENV MIMALLOC_RESERVE_HUGE_OS_PAGES=4
 
 # force it to use static lib (from above) not standard libgo_cosmwasm.so file
 RUN LEDGER_ENABLED=false go build -work -tags muslc,linux -mod=readonly -ldflags="-extldflags '-L/code/mimalloc/build -lmimalloc'" -o build/mantlemint ./sync.go
