docs: explain shared/static

--- a/bin/v0.34.x/Makefile
+++ b/bin/v0.34.x/Makefile
@@ -10,12 +10,13 @@ else
 endif
 
 
-build-linux:
+build-static:
 	mkdir -p $(BUILDDIR)
-	docker buildx build --platform=linux/amd64 --tag terramoney/mantlemint ./
-	docker create --platform=linux/amd64 --name temp terramoney/mantlemint:latest
+	docker buildx build --tag terramoney/mantlemint ./
+	docker create --name temp terramoney/mantlemint:latest
 	docker cp temp:/usr/local/bin/mantlemint $(BUILDDIR)/
 	docker rm temp
 
 install: go.sum
 	go install -mod=readonly $(BUILD_FLAGS) ./
+	mv $(GOPATH)/bin/mantlemint-provider-v0.34.x $(GOPATH)/bin/mantlemint
