--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,12 +5,14 @@ on:
     branches:
       - main
       - test
-      - classic
+      - release/v*
+      - classic/v*
   push:
     branches:
       - main
       - test
-      - classic
+      - release/v*
+      - classic/v*
     tags:
       - 'v*'
 
@@ -60,7 +62,8 @@ jobs:
             type=edge,branch=test
             type=semver,pattern={{tag}}
             type=semver,pattern={{version}}
-            type=raw,value=classic,event=branch,enable=${{ github.ref == format('refs/heads/{0}', 'classic') }}
+            type=raw,value=latest,event=branch,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
+            type=raw,value=classic,event=branch,enable=${{startsWith(github.ref, format('refs/heads/{0}/v', 'classic')) }}
 
       - name: Build docker image
         uses: docker/build-push-action@v3
@@ -71,3 +74,4 @@ jobs:
           # platforms: linux/amd64,linux/arm64
           tags: ${{ env.DOCKER_METADATA_OUTPUT_TAGS }}
           labels: ${{ env.DOCKER_METADATA_OUTPUT_LABELS }}
+
