--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,8 @@ on:
   push:
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+' # Push events to matching v*, i.e. v1.0, v20.15.10
-      - 'v[0-9]+.[0-9]+.[0-9]+-rc*' # Push events to matching v*, i.e. v1.0-rc1, v20.15.10-rc5
+      - 'v[0-9]+.[0-9]+.[0-9]+-rc[0-9]' # Push events to matching v*, i.e. v1.0-rc1, v20.15.10-rc5
+      - 'v[0-9]+.[0-9]+.[0-9]+-classic'
 
 jobs:
   release:
